docs: document that subscription-ends notification is also sent when deleted by requester

--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -35,6 +35,7 @@ info:
     It is used when:
       - the subscription expiration time (optionally set by the requester) has been reached
       - the maximum number of subscription events (optionally set by the requester) has been reached
+      - the subscription was deleted by the requester
       - the API server has to stop sending notification prematurely
       - the Access Token sinkCredential expiration time (set by the requester) has been reached
 
