--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -332,14 +332,14 @@ components:
       description: Correlation id for the different services
       schema:
         type: string
-        pattern: ^[a-zA-Z0-9-]{0,55}$
+        pattern: pattern: ^[a-zA-Z0-9-_:;.\/<>{}]{0,256}$
         example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
   headers:
     x-correlator:
       description: Correlation id for the different services
       schema:
         type: string
-        pattern: ^[a-zA-Z0-9-]{0,55}$
+        pattern: pattern: ^[a-zA-Z0-9-_:;.\/<>{}]{0,256}$
         example: "b4333c46-49c0-4f62-80d7-f0ef930f1c46"
   schemas:
     PhoneNumber:
